<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="register_advantage">注册可以备份好友生日</string>
    <string name="no_feedback">没有反馈</string>
    <string name="success">成功备份到/sdcard/birthday/下面</string>
    <string name="recover_success">成功从/sdcard/birthday/中取出备份文件</string>
	<string name="no_db_file">/sdcard/birthday/目录下没有备份文件</string>
    <string name="back">返回</string>
    <string name="birth_title">生日</string>
    <string name="import_title">导入</string>
    <string name="mine_title">个人中心</string>
    <string name="more_title">更多</string>
    <string name="app_name">360生日管家</string>
    <string name="star_birth">重要生日</string>
    <string name="all_birth">全部生日</string>
    <string name="empty">没有生日</string>
    <string name="empty_star">没有重要生日</string>
    <string name="more">更多</string>
    <string name="ringtype">提醒方式</string>
    <string name="ringtype_hint">请先设置生日</string>
    <string name="ringdays">提醒天数:</string>
    <string name="ringdays_hint">生日当天提醒</string>
    <string name="app_store1">装机必备</string>
    <string name="app_store2">热门推荐</string>
    <string name="app_store3">市场专区</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="take_picture">拍照</string>
    <string name="select_picture">图库</string>
    <string name="default_picture">默认</string>
    <string name="gender_title">"选择性别"</string>
    <string name="ring_title">"提醒天数设置"</string>
    <string name="save">保存</string>
    <string name="select_photo">选择头像</string>
    <string name="detail_title">生日详情</string>
    <string name="modify">修改</string>
    <string name="add_title">添加生日</string>
    <string name="edit_title">编辑生日</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="star_string">已设置为重要生日</string>
    <string name="no_remind">不提醒</string>
    <string name="age">距离%d岁公历生日</string>
    <string name="lunar_age">距离%d岁农历生日</string>
    <string name="birthover">今年生日已经过完</string>
    <string name="today_birthday">%d岁农历生日</string>
    <string name="today_birthday_solar">%d岁公历生日</string>
    <string name="age_constants">距</string>
    <string name="ageShowsolar">%2$s岁生日，还有$s天</string>
    <string name="ageShowlunar">%2$s岁生日，还有$s天</string>
    <string name="age_show">距%1$d岁生日，还有%2$d天</string>
    <string name="noalarm">未开启提醒</string>
    <string name="solaralarm">公历提醒:%s</string>
    <string name="lunaralarm">农历提醒:%s</string>
    <string name="bless">短信祝福</string>
    <string name="lucky">每日运势</string>
    <string name="wiki">生日百科</string>
    <string name="phone">手机:</string>
    <string name="send">发送</string>
    <string name="selectcontact">选择</string>
    <string name="male">帅哥</string>
    <string name="female">美女</string>
    <string name="importRenren">人人网好友</string>
    <string name="importKaxin">开心网好友</string>
    <string name="select_all">全选</string>
    <string name="deselect_all">取消全选</string>
    <string name="no_renren_friend">人人网上没有好友</string>
    <string name="import_complete">导入完成</string>
    <string name="import_failure">导入失败</string>
    <string name="after">后</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="account">帐号:</string>
    <string name="account_hint">手机号码</string>
    <string name="password">密码:</string>
    <string name="other_login">其他方式登录:</string>
    <string name="new_user_reg">注册</string>
    <string name="login">登录</string>
    <string name="user_name">昵称</string>
    <string name="phone_number">手机号码:</string>
    <string name="phone_number_hint">请输入手机号码</string>
    <string name="user_name_hint">请输入你的昵称</string>
    <string name="password_hint">6-16个字符</string>
    <string name="name_empty_hint">帐号不能为空</string>
    <string name="passwd_empty_hint">请输入密码</string>
    <string name="login_title">检查登录</string>
    <string name="login_message">正在登录,请稍侯...</string>
    <string name="error_title">出错了^_^</string>
    <string name="error_message">帐号密码输入有误或者网络请求发生错误，请检查！</string>
    <string name="about_detail_new">Copyright©2012 DStudio 梦想工作室 版权所有</string>
    <string name="client_name">我的生日管家 Android版</string>
    <string name="client_version">版本%1$s</string>
    <string name="setting">提醒开启</string>
    <string name="feedback">帮助反馈</string>
    <string name="appstore">精品推荐</string>
    <string name="update">检测更新</string>
    <string name="invite">邀请好友</string>
    <string name="about">关于我们</string>
    <string name="renren_import">从人人网导入好友生日</string>
    <string name="kaixin_import">从开心网导入好友生日</string>
    <string name="contact_import">从电话薄导入好友生日</string>
    <string name="delete_title">删除好友</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_message">删除中，请稍侯...</string>
    <string name="add">添加</string>
    <string name="edit">编辑</string>
    <string name="share_message_content">嗨，#我正使用360生日管家#，不仅帮我记住了所有亲朋好友的生日，还可以从人人网，开心网导入好友哦。永久免费的哦，推荐你试试http://msm.qq.com</string>
    <string name="micro_blog_account">帐　号</string>
    <string name="micro_blog_password">密　码</string>
    <string name="micro_blog_account_hint">支持微博帐号/QQ号</string>
    <string name="follow_QQPhoneSecure">关注生日管家</string>
	<string name="share_weibo">分享到微博</string>
	<string name="share_sms">发送短信</string>
	<string name="feedback_contact_hint">联系方式:邮箱/QQ/手机号</string>
    <string name="feedback_content_hint">请输入您的反馈意见</string>
    <string name="submit">提交</string>
    <string name="mock_record_first">常见的音乐随机播放算法主要有两种：一是Shuffle算法；二是Random算法</string>
    <string name="mock_record_second">开源项目几乎都使用版本控制系统来对代码进行维护，著名的版本控制软件有诸如CVS、Rational ClearCase、Microsoft Visual SourceSafe、Git、Subversion、Mercurial等等</string>
    <string name="feedback_record">反馈记录</string>
    <string name="request_content">请输入反馈的意见</string>
    <string name="waiting">正在处理，请稍等片刻…</string>
    <string name="feedback_success">发送成功</string>
    <string name="feedback_failed">发送失败</string>
    <string name="update_hint">正在检查更新...</string>
    <string name="note_hint">如购买礼物...</string>
    <string name="note_str">备注:</string>
    <string name="no_phone_number">未设置电话号码</string>
    <string name="pls_input_name">请输入姓名</string>
    <string name="save_birthday">生日</string>
    <string name="save_birthday_hint">请设置生日</string>
    <string name="phone_input_hint">请输入手机号码</string>
    <string name="gender">性别</string>
    <string name="default_gender">男</string>
    <string name="autologin">自动登录</string>
    <string name="rememberpass">记住帐号</string>
    <string name="read">我已阅读</string>
    <string name="baby_eula">《360生日管家用户协议》</string>
    <string name="get_validation_code_hint">如果您在1分钟内未收到验证码，请重新获取</string>
    <string name="validation_code">验证码：</string>
    <string name="input_validation_code_hint">请输入验证码</string>
    <string name="get_validation_code">获取验证码</string>
    <string name="cant_get_regid">收不到?</string>
    <string name="register">注册帐号</string>
    <string name="edit_profile">个人设置</string>
    <string name="pls_input_phone">请输入电话号码</string>
    <string name="privacy_set">隐私设置</string>
    <string name="following">关注</string>
    <string name="follower">粉丝</string>
    <string name="my_article">记录</string>
    <string name="my_subject">随笔</string>
    <string name="recovery">恢复(从云端恢复到手机)</string>
    <string name="backup">备份(备份本地生日到云端)</string>
    <string name="sync">同步(本地与云端保持一致)</string>
    <string name="search_search">查找</string>
    <string name="personal">我</string>
    <string name="correct_phone">请输入手机号码</string>
    <string name="val_code">请输入验证码</string>
    <string name="nickname_hint">输入昵称</string>
    <string name="register_success">注册成功</string>
    <string name="error_register_message">注册失败,请检测网络以及各输入!</string>
    <string name="error_already_register">手机号码已经注册过了！</string>
    <string name="nickname">昵称:</string>
    <string name="quit_login">退出登录</string>
    <string name="birth_remind">今天过生日的好友</string>
    <string name="family">亲情</string>
    <string name="love">爱情</string>
    <string name="friend">友情</string>
    <string name="open">已开启</string>
    <string name="close">未开启</string>
    <string name="check">查看</string>
    <string name="request_contact">请输入联系方式</string>
</resources>