<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/brand_list_menu"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/dialog_bg" >

    <TextView
        android:id="@+id/select_text_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6.0dip"
        android:text="@string/select_photo"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/takepic_button"
        android:layout_marginTop="15dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/take_picture"
        android:textSize="13sp" />

    <Button
        android:id="@+id/gallery_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_picture"
        android:textSize="13sp" />

    <!--
          <TextView
        android:id="@+id/default_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gallery_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10.0dip"
        android:background="@drawable/menu_white_button_bg"
        android:text="@string/default_picture"
        android:textSize="20.0dip" />
    -->

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textSize="13sp" />

</LinearLayout>