<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/default_linearlayout_background" >

    <include
        android:id="@+id/head"
        layout="@layout/head_nav" />

    <FrameLayout
        android:id="@+id/mainBodyLayout"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="1.0" >

        <LinearLayout style="@style/default_body_container" >

            <ScrollView
                android:id="@+id/scrollView1"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical" >

                    <LinearLayout style="@style/more_row_wrapper" >

                        <LinearLayout
                            android:id="@+id/setting"
                            android:visibility="gone"
                            style="@style/more_row_layout" >

                            <TextView
                                android:id="@+id/eventTitle"
                                style="@style/more_row_title_text"
                                android:text="@string/setting" />

                            <ToggleButton
                                android:id="@+id/toggleBtn"
                                style="@style/more_right_toggle" />
                           
                        </LinearLayout>

                        <ImageView android:visibility="gone"
                            style="@style/divider_line" />
                        <LinearLayout
                            android:id="@+id/auto_login"
                            android:visibility="gone"
                            style="@style/more_row_layout" >

                            <TextView
                                style="@style/more_row_title_text"
                                android:text="@string/autologin" />

                            <ToggleButton
                                android:id="@+id/auto_login_toggle"
                                style="@style/more_right_toggle" />
                           
                        </LinearLayout>

                        <ImageView style="@style/divider_line" />

                        <LinearLayout
                            android:id="@+id/feedback"
                            style="@style/more_row_layout" >

                            <TextView
                                android:id="@+id/shareTitle"
                                style="@style/more_row_title_text"
                                android:text="@string/feedback" />

                            <ImageButton
                                android:id="@+id/shareArrow"
                                style="@style/more_right_arrow" />
                        </LinearLayout>
                    </LinearLayout>

                    <LinearLayout
                        style="@style/more_row_wrapper"
                        android:layout_gravity="center" >

                        <LinearLayout
                            android:id="@+id/appstore"
                            android:visibility="gone"
                            style="@style/more_row_layout" >

                            <TextView
                                android:id="@+id/netSettingTitle"
                                style="@style/more_row_title_text"
                                android:text="@string/appstore" />

                            <ImageButton
                                android:id="@+id/netSettingArrow"
                                style="@style/more_right_arrow" />
                        </LinearLayout>

                        <ImageView style="@style/divider_line" />

                        <LinearLayout
                            android:id="@+id/update"
                            style="@style/more_row_layout" >

                            <TextView
                                android:id="@+id/bindEmailTitle"
                                style="@style/more_row_title_text"
                                android:text="@string/update" />

                            <ImageButton
                                android:id="@+id/bindEmailArrow"
                                style="@style/more_right_arrow" />
                        </LinearLayout>

                        <ImageView style="@style/divider_line" />

                        <LinearLayout
                            android:id="@+id/invite"
                            style="@style/more_row_layout" >

                            <TextView
                                android:id="@+id/inviteTitle"
                                style="@style/more_row_title_text"
                                android:text="@string/invite" />

                            <ImageButton
                                android:id="@+id/inviteArrow"
                                style="@style/more_right_arrow" />
                        </LinearLayout>

                        <ImageView style="@style/divider_line" />

                        <LinearLayout
                            android:id="@+id/about"
                            style="@style/more_row_layout" >

                            <TextView
                                style="@style/more_row_title_text"
                                android:text="@string/about" />

                            <ImageButton style="@style/more_right_arrow" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>

