<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/main_tab_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_bg"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="2.0dip"
            android:paddingRight="2.0dip"
            android:paddingTop="2.0dip" >

            <RadioButton
                android:id="@+id/tab_brand"
                style="@style/bottom_radio"
                android:checked="true"
                android:drawableTop="@drawable/bottom_brand_radio_button_bg"
                android:text="@string/birth_title" />

            <RadioButton
                android:id="@+id/tab_rank"
                style="@style/bottom_radio"
                android:drawableTop="@drawable/bottom_follow_radio_button_bg"
                android:text="@string/rank_title" />

            <RadioButton
                android:id="@+id/tab_mine"
                style="@style/bottom_radio"
                android:drawableTop="@drawable/bottom_setting_radio_button_bg"
                android:text="@string/mine_title" />

            <RadioButton
                android:id="@+id/tab_more"
                style="@style/bottom_radio"
                android:drawableTop="@drawable/bottom_favorite_radio_button_bg"
                android:text="@string/more_title" />
        </RadioGroup>
    </LinearLayout>

</TabHost>